--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
-spring.datasource.url=jdbc:mysql://172.16.12.254:3306/d21it184
-spring.datasource.username=d21it184
-spring.datasource.password=password
+spring.datasource.url=jdbc:mysql://172.16.12.254:3306/20it036
+spring.datasource.username=root
+spring.datasource.password=Mysql@123
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
